hard-gists/4156864/run.log
=== Docker Run Log for 4156864 ===
Started at: Mi 29. Okt 14:23:25 CET 2025

[2025-10-29 14:23:25] START: Running container for 4156864
[2025-10-29 14:23:25] SUCCESS: Container fe0e024ffadef928dd08c855a8f857672775946193627a3ad3d430f4af5dd086 started for 4156864
=== Container logs for 4156864 ===
  File "/snippet.py", line 34
    print event.msg_type
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4156864 ===
[2025-10-29 14:23:27] INFO: Container fe0e024ffadef928dd08c855a8f857672775946193627a3ad3d430f4af5dd086 has stopped
